--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,6 +12,7 @@
   }
   
   h3 {
+    color:#00b900;
     font-weight: 600;
     text-align: center;
     font-size: 1.5rem;
@@ -19,7 +20,7 @@
   
   button {
     border: none;
-    background: #265f82;
+    background: #7d879d;
     color: white;
     cursor: pointer;
     padding: 10px;
@@ -44,12 +45,12 @@
     height: 100vh;
     width: 100vw;
     justify-content: center;
-    background: -moz-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* ff3.6+ */
+    background: -moz-linear-gradient(325deg, rgba(244, 245, 246,1) 0%, rgba(217, 221, 224,1) 100%); /* ff3.6+ */
     background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(49,84,129,1)), color-stop(100%, rgba(39,107,130,1))); /* safari4+,chrome */
-    background: -webkit-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* safari5.1+,chrome10+ */
-    background: -o-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* opera 11.10+ */
-    background: -ms-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* ie10+ */
-    background: linear-gradient(325deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* w3c */
+    background: -webkit-linear-gradient(325deg, rgba(244, 245, 246,1) 0%, rgba(217, 221, 224,1) 100%); /* safari5.1+,chrome10+ */
+    background: -o-linear-gradient(325deg, rgba(244, 245, 246,1) 0%, rgba(217, 221, 224,1) 100%); /* opera 11.10+ */
+    background: -ms-linear-gradient(325deg, rgba(244, 245, 246,1) 0%, rgba(217, 221, 224,1) 100%); /* ie10+ */
+    background: linear-gradient(325deg, rgba(244, 245, 246,1) 0%, rgba(217, 221, 224,1) 100%); /* w3c */
   }
   
   .centered-form__form {
@@ -87,11 +88,11 @@
     overflow-y: auto;
     width: 260px;
     height: 100vh;
-    background: -moz-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* ff3.6+ */
+    background: -moz-linear-gradient(325deg, rgba(244, 245, 246,1) 0%, rgba(217, 221, 224,1) 100%); /* ff3.6+ */
     background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(49,84,129,1)), color-stop(100%, rgba(39,107,130,1))); /* safari4+,chrome */
-    background: -webkit-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* safari5.1+,chrome10+ */
-    background: -o-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* opera 11.10+ */
-    background: -ms-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* ie10+ */
+    background: -webkit-linear-gradient(325deg, rgba(244, 245, 246,1) 0%, rgba(217, 221, 224,1) 100%); /* safari5.1+,chrome10+ */
+    background: -o-linear-gradient(325deg, rgba(244, 245, 246,1) 0%, rgba(217, 221, 224,1) 100%); /* opera 11.10+ */
+    background: -ms-linear-gradient(325deg, rgba(244, 245, 246,1) 0%, rgba(217, 221, 224,1) 100%); /* ie10+ */
     background: linear-gradient(325deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* w3c */
   }
   
